--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
 	    <artifactId>logback-classic</artifactId>
 	    <version>1.4.7</version>
 	</dependency>
-
+	<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+	<dependency>
+	    <groupId>commons-io</groupId>
+	    <artifactId>commons-io</artifactId>
+	    <version>2.11.0</version>
+	</dependency>
   </dependencies>
 </project>
